<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSDN博客</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="blog_hint">输入博客账号(例：qibin0506)</string>
    <string name="loading">加载中...</string>
    <string name="complete">已加载全部</string>
    <string name="clear_cache">清理缓存</string>
    <string name="my_focus">我的关注</string>
    <string name="local_blog">本地缓存</string>
    <string name="blog_notify">博客提醒</string>
    <string name="about">使用帮助</string>
    
    <string-array name="notify">
        <item>开启</item>
        <item>关闭</item>
    </string-array>

</resources>
